--- a/.gitignore
+++ b/.gitignore
@@ -143,7 +143,8 @@ $RECYCLE.BIN/
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
 
-acme.json
+acme*.json
 CF_API_EMAIL
 CF_DNS_API_TOKEN
 CF_ZONE_API_TOKEN
+*.log
