--- a/docker/traefik.toml
+++ b/docker/traefik.toml
@@ -128,6 +128,7 @@
         #
         # provider = "digitalocean"
         provider = "cloudflare"
+        # provider = "manual"
 
         # By default, the provider will verify the TXT DNS challenge record before letting ACME verify.
         # If delayBeforeCheck is greater than zero, this check is delayed for the configured duration in seconds.
@@ -173,6 +174,7 @@
       caServer = "https://acme-staging-v02.api.letsencrypt.org/directory"
       [certificatesResolvers.test.acme.dnsChallenge]
         provider = "cloudflare"
+        # provider = "manual"
         delayBeforeCheck = 10
         resolvers = ["1.0.0.1:53", "8.8.8.8:53"]
 
