Fix: Add certificatesResolvers from manual provider

--- a/docker/config/traefik.toml
+++ b/docker/config/traefik.toml
@@ -32,7 +32,7 @@
 
       [http.routers.traefik-dashboard-tls.tls]
         options = "default"
-        certResolver = "test"
+        certResolver = "manual"
         [[http.routers.traefik-dashboard-tls.tls.domains]]
           main = "traefik.issenn.cf"
           sans = ["traefik.issenn.cf"]
