--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -101,6 +101,10 @@ services:
       - "traefik.http.routers.traefik.rule=Host(`traefik.docker.localhost`)"
       - "traefik.http.routers.traefik.entrypoints=web"
       - "traefik.http.services.traefik.loadbalancer.server.port=8080"
+    # stdin_open: true  # docker run -i
+    # tty: true  # docker run -t
+
+# docker-compose run -T --service-ports traefik
 
   # whoami:
   #   # A container that exposes an API to show its IP address
